# finvariant-mcp

./: CHANGELOG.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
assets/: architecture.py
finvariant_mcp/: __init__.py  _tools.py  server.py
tests/: test_server.py  test_tools.py
